--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@handsontable/react": "^15.3.0",
     "firebase": "^11.9.1",
+    "handsontable": "^15.3.0",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dnd": "^16.0.1",
