--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@handsontable/react": "^15.3.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "firebase": "^11.9.1",
     "handsontable": "^15.3.0",
     "next": "15.3.3",
@@ -18,7 +19,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icon": "^1.0.0"
+    "react-icon": "^1.0.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
