--- a/package.json
+++ b/package.json
@@ -9,8 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@handsontable/react": "^15.3.0",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "@types/react-slick": "^0.23.13",
     "firebase": "^11.9.1",
     "handsontable": "^15.3.0",
     "next": "15.3.3",
@@ -20,7 +25,9 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icon": "^1.0.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
