--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icon": "^1.0.0",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
