--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-flaticons": "^1.1.5",
     "react-hot-toast": "^2.5.2",
     "react-icon": "^1.0.0",
     "react-redux": "^9.2.0",
