--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "handsontable": "^15.3.0",
     "next": "15.3.3",
     "react": "^19.0.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
