--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@handsontable/react": "^15.3.0",
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
+    "@mui/x-charts": "^8.5.2",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-slick": "^0.23.13",
     "firebase": "^11.9.1",
