--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-slick": "^0.23.13",
     "firebase": "^11.9.1",
     "handsontable": "^15.3.0",
+    "jspdf": "^3.0.1",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.1.0",
