moved some buttons in the Profile component to the sidebar, added the calendar, removed the share functionality from the header

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@mui/icons-material": "^7.1.1",
     "@mui/material": "^7.1.1",
     "@mui/x-charts": "^8.5.2",
+    "@mui/x-date-pickers": "^8.5.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-slick": "^0.23.13",
+    "dayjs": "^1.11.13",
     "firebase": "^11.9.1",
     "handsontable": "^15.3.0",
     "jspdf": "^3.0.1",
