--- a/package.json
+++ b/package.json
@@ -24,13 +24,16 @@
     "handsontable": "^15.3.0",
     "jspdf": "^3.0.1",
     "next": "15.3.3",
+    "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
+    "react-pdf": "^10.0.1",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
