--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-slick": "^0.23.13",
     "dayjs": "^1.11.13",
+    "emoji-picker-react": "^4.12.3",
     "firebase": "^11.9.1",
     "handsontable": "^15.3.0",
     "jspdf": "^3.0.1",
@@ -38,6 +39,7 @@
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
+    "use-debounce": "^10.0.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
