added markdown editor component

--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.55.0",
+    "@codemirror/autocomplete": "^6.18.6",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-markdown": "^6.3.3",
+    "@codemirror/language": "^6.11.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@handsontable/react": "^15.3.0",
@@ -19,10 +26,17 @@
     "@mui/x-date-pickers": "^8.5.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-slick": "^0.23.13",
+    "@uiw/codemirror-themes": "^4.23.14",
+    "@uiw/codemirror-themes-all": "^4.23.14",
+    "@uiw/react-codemirror": "^4.23.14",
+    "@uiw/react-markdown-preview": "^5.1.4",
+    "@uiw/react-md-editor": "^4.0.7",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.9.1",
+    "framer-motion": "^12.20.1",
     "handsontable": "^15.3.0",
+    "highlight.js": "^11.11.1",
     "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "next": "15.3.3",
@@ -38,6 +52,12 @@
     "react-pdf": "^10.0.1",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
+    "react-syntax-highlighter": "^15.6.1",
+    "rehype-highlight": "^7.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.1",
+    "remark-math": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "use-debounce": "^10.0.5",
     "zustand": "^5.0.5"
@@ -45,10 +65,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/katex": "^0.16.7",
     "@types/lodash": "^4.17.19",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
