--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@uiw/react-codemirror": "^4.23.14",
     "@uiw/react-markdown-preview": "^5.1.4",
     "@uiw/react-md-editor": "^4.0.7",
+    "chart.js": "^4.5.0",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.9.1",
@@ -42,6 +43,7 @@
     "next": "15.3.3",
     "pdfjs-dist": "^5.3.31",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
