--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
