--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
+    "types": ["./node_modules/react-latex-next/dist/types/index.d.ts"],
     "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
