--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "@anthropic-ai/sdk": "^0.55.0",
     "@codemirror/autocomplete": "^6.18.6",
     "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
     "@codemirror/lang-markdown": "^6.3.3",
+    "@codemirror/lang-sql": "^6.9.0",
     "@codemirror/language": "^6.11.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.0",
@@ -43,6 +47,7 @@
     "lodash": "^4.17.21",
     "next": "15.3.3",
     "pdfjs-dist": "^5.3.31",
+    "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-copy-to-clipboard": "^5.1.0",
