--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@codemirror/language": "^6.11.2",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.0",
+    "@emmetio/codemirror6-plugin": "^0.4.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@handsontable/react": "^15.3.0",
