--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "@mui/x-date-pickers": "^8.5.3",
     "@reduxjs/toolkit": "^2.8.2",
     "@types/react-slick": "^0.23.13",
-    "@uiw/codemirror-themes": "^4.23.14",
-    "@uiw/codemirror-themes-all": "^4.23.14",
-    "@uiw/react-codemirror": "^4.23.14",
+    "@uiw/codemirror-themes": "^4.24.0",
+    "@uiw/codemirror-themes-all": "^4.24.0",
+    "@uiw/react-codemirror": "^4.24.0",
     "@uiw/react-markdown-preview": "^5.1.4",
     "@uiw/react-md-editor": "^4.0.7",
     "chart.js": "^4.5.0",
@@ -66,6 +66,7 @@
     "rehype-highlight": "^7.0.2",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "slick-carousel": "^1.8.1",
