--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@codemirror/lang-markdown": "^6.3.3",
     "@codemirror/lang-sql": "^6.9.0",
     "@codemirror/language": "^6.11.2",
+    "@codemirror/legacy-modes": "^6.5.1",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.38.0",
     "@emmetio/codemirror6-plugin": "^0.4.0",
@@ -37,6 +38,7 @@
     "@uiw/react-markdown-preview": "^5.1.4",
     "@uiw/react-md-editor": "^4.0.7",
     "chart.js": "^4.5.0",
+    "codemirror-lang-math": "^0.1.8",
     "dayjs": "^1.11.13",
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.9.1",
