updated the model so the AI model respond to users with markdown language

--- a/package.json
+++ b/package.json
@@ -40,11 +40,13 @@
     "chart.js": "^4.5.0",
     "codemirror-lang-math": "^0.1.8",
     "dayjs": "^1.11.13",
+    "dom-to-image-more": "^3.6.0",
     "emoji-picker-react": "^4.12.3",
     "firebase": "^11.9.1",
     "framer-motion": "^12.20.1",
     "handsontable": "^15.3.0",
     "highlight.js": "^11.11.1",
+    "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
     "katex": "^0.16.22",
     "lodash": "^4.17.21",
