--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "rehype-mathjax": "^7.1.0",
     "rehype-raw": "^7.0.0",
     "rehype-sanitize": "^6.0.0",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "slick-carousel": "^1.8.1",
