Added a shareNotesWithQRCode feature

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-latex-next": "^3.0.0",
     "react-markdown": "^10.1.0",
     "react-pdf": "^10.0.1",
+    "react-qr-code": "^2.0.18",
     "react-redux": "^9.2.0",
     "react-slick": "^0.30.3",
     "react-syntax-highlighter": "^15.6.1",
