--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "remark-gfm": "^4.0.1",
     "remark-math": "^6.0.0",
     "slick-carousel": "^1.8.1",
+    "tesseract.js": "^6.0.1",
     "use-debounce": "^10.0.5",
     "zod": "^4.1.11",
     "zustand": "^5.0.5"
