--- a/package.json
+++ b/package.json
@@ -57,18 +57,18 @@
     "jspdf": "^3.0.1",
     "katex": "^0.16.22",
     "lodash": "^4.17.21",
-    "next": "15.3.3",
+    "next": "^15.3.3",
     "openai": "^5.22.0",
     "or": "^0.2.0",
     "pdfjs-dist": "^5.3.31",
     "prettier": "^3.6.2",
-    "react": "^19.0.0",
+    "react": "^19.2.0",
     "react-autosave": "^0.5.0",
     "react-chartjs-2": "^5.3.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.2.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-latex-next": "^3.0.0",
